--- a/.tmux.conf
+++ b/.tmux.conf
@@ -107,26 +107,31 @@ if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboar
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#v2.1.0' # See https://github.com/catppuccin/tmux/tags for additional tags
+# set -g @plugin 'catppuccin/tmux#v2.1.0' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'light' # 'dark', 'dark256', 'light', 'light256'
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
+# set -g @catppuccin_flavor "mocha"
 
 # Window styles
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_text " #{s|^$HOME|~|:pane_current_path}"
-set -g @catppuccin_window_current_text " #{s|^$HOME|~|:pane_current_path}"
+# set -g @catppuccin_window_status_enable "yes"
+# set -g @catppuccin_window_text " #{s|^$HOME|~|:pane_current_path}"
+# set -g @catppuccin_window_current_text " #{s|^$HOME|~|:pane_current_path}"
 
 # Load catppuccin
-run ~/.tmux/plugins/tmux/catppuccin.tmux
+# run ~/.tmux/plugins/tmux/catppuccin.tmux
 
 # Make the status line pretty and add some modules
 set -g status-right-length 100
 set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
+set -g @tmux-gruvbox-left-status-a '#{s|$HOME|~|;s|/.*/|/…/|:pane_current_path}'
+set -g @tmux-gruvbox-right-status-x '%m/%d/%Y'
+set -g @tmux-gruvbox-right-status-z '(o_o)'
+
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
+# set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
