--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,3 +1,5 @@
 {
-  "small_model": "minimax/MiniMax-M2.1"
+  "small_model": "minimax/MiniMax-M2.1",
+  "$schema": "https://opencode.ai/config.json",
+  "plugin": ["oh-my-opencode"]
 }
