--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,4 +1,4 @@
 {
   "small_model": "minimax/MiniMax-M2.1",
-  "$schema": "https://opencode.ai/config.json",
+  "$schema": "https://opencode.ai/config.json"
 }
