update small opencode model, enable extended keys for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,11 @@ bind e new-window -n "~/.tmux.conf.local" "EDITOR=\${EDITOR//mvim/vim} && EDITOR
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
+# enable extended keys for proper modifier key support
+# allows shift+enter, ctrl+shift+<key>, etc. to work correctly
+set -s extended-keys on
+set -as terminal-features 'xterm*:extkeys'
+
 # -- display -------------------------------------------------------------------
 
 set -g base-index 1
