--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,4 +1,10 @@
 {
   "small_model": "opencode/gpt-5.1-codex-mini",
-  "$schema": "https://opencode.ai/config.json"
+  "$schema": "https://opencode.ai/config.json",
+  "mcp": {
+    "context7": {
+      "type": "remote",
+      "url": "https://mcp.context7.com/mcp"
+    }
+  }
 }
