--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,11 +1,14 @@
 {
-  "plugin": ["oh-my-opencode@3.1.5"],
+  "plugin": ["oh-my-opencode@3.1.7"],
   "small_model": "opencode/gpt-5.1-codex-mini",
   "$schema": "https://opencode.ai/config.json",
   "mcp": {
     "context7": {
       "type": "remote",
       "url": "https://mcp.context7.com/mcp"
+    },
+    "notion": {
+      "url": "https://mcp.notion.com/mcp"
     }
   }
 }
