chore: update gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,10 @@
 [include]
   path = ~/dev/macOS-dots/themes.gitconfig
 
+[user]
+	name = Khoa Huynh
+	email = khoahuynh.toronto@gmail.com
+
 [core]
   pager = delta
   editor = nvim
@@ -13,6 +17,9 @@
   st = status
   unstage = reset HEAD --
   last = log -1 HEAD
+  dft = "!GIT_EXTERNAL_DIFF=difft git diff"
+  dfl = "!GIT_EXTERNAL_DIFF=difft git log -p --ext-diff"
+  dfs = "!GIT_EXTERNAL_DIFF=difft git show --ext-diff"
 
 [interactive]
   diffFilter = delta --color-only
