--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,11 +1,12 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "plugin": ["oh-my-opencode@latest"],
-  "small_model": "opencode/kimi-k2.5-free",
+  "small_model": "openai/gpt-5.3-codex-spark",
   "mcp": {
     "context7": {
       "type": "remote",
-      "url": "https://mcp.context7.com/mcp"
+      "url": "https://mcp.context7.com/mcp/oauth",
+      "enabled": true
     },
     "terraform": {
       "type": "local",
@@ -28,15 +29,6 @@
       "type": "remote",
       "url": "https://mcp.notion.com/mcp"
     },
-    // Prefer CLI + skills instead
-    // "playwright": {
-    //   "type": "local",
-    //   "command": [
-    //     "npx",
-    //     "@playwright/mcp@latest"
-    //   ],
-    //   "enabled": true
-    // },
     "linear": {
       "type": "remote",
       "url": "https://mcp.linear.app/mcp",
